--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <p> click image to view project</p>
     </section>
 
-    <main>
-        <article class="project-container">
+    <main id="container">
+        <!-- <article class="project-container">
             <div class="project-item">
                 <h4>color flipper</h4>
                 <a href="https://shakexsempe.github.io/color-flipper/" target="_blank">
@@ -81,12 +81,14 @@
                 <a href="https://shakexsempe.github.io/color-flipper/" target="_blank">
                     <img src="img/color-flip.bmp" alt=""></a>
             </div>
-        </article>
+        </article> -->
 
     </main>
     <footer>
         <p>shakex sempe: <span id="date"></span></p>
     </footer>
+
+    <script src="js/main.js"></script>
 </body>
 
 </html>
