--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                     <img src="img/color-flip.bmp" alt=""></a>
             </div>
         </article> -->
-        
+
     </main>
     <footer>
-        <p>shakex sempe: <span id="date"></span></p>
+        <p>copyright&copy; shakex sempe: <span id="date"></span></p>
     </footer>
 
     <script src="js/main.js"></script>
