google fonts and transition effects

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </header>
 
     <section>
-        <h3>links to github repositories</h3>
-        <p> click image to view project</p>
+        <h3>github repository links</h3>
+        <a href="#container">view projects</a>
     </section>
 
     <main id="container">
