--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <section>
-        <h3>github repository links</h3>
+        <h3>vanilla javascript projects</h3>
         <a href="#container">view projects</a>
     </section>
 
