--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <section>
         <h3>vanilla javascript projects</h3>
         <a href="#container">view projects</a>
+        <!-- <figure>
+            <img src="img/js.png" alt="javascript logo" style="width: 100%;">
+        </figure> -->
     </section>
 
     <main id="container">
