shopping list link and footer style

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     </main>
     <footer>
-        <p>copyright&copy; shakex sempe: <span id="date"></span></p>
+        <p>copyright&copy; <a href="http://shakexsempe.netlify.app/" target="_blank">shakex sempe</a> <span id="date"></span></p>
     </footer>
 
     <script src="js/main.js"></script>
