--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <section>
-        <h2>vanilla javascript projects</h2>
+        <h2>Boitumelo sempe</h2>
         <a href="#container">view projects</a>
         <!-- <figure>
             <img src="img/js.png" alt="javascript logo" style="width: 100%;">
