head: meta tags and links

--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- META THEME-COLOR -->
     <meta name="theme-color" content="#F7E018">
-    <title>Javascript Portfolio</title>
+    <!-- TITLE -->
+    <title>Javascript Portfolio - Boitumelo Sempe</title>
+    <!-- META DESCRIPTION -->
+    <meta name="description" content="this is a javascript portfolio page for Boitumelo Shakes Sempe">
+    <!-- META KEYWORDS -->
+    <meta name="keywords" content="javascript, sass, html5, portfolio, js">
+    <!-- META AUTHOR -->
+    <meta name=author content="Boitumelo Shakex Sempe">
+    <!-- CSS LINK -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- ICONS LINK -->
     <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Montserrat:wght@200;400;600;700&display=swap" rel="stylesheet">
 </head>
 
