--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- META THEME-COLOR -->
     <meta name="theme-color" content="#F7E018">
+    <!-- META OG IMAGE -->
+    <meta name="image" property="og:image" content="https://javascript-portfolio-boitumelo-sempe.netlify.app/js-min.png">
     <!-- TITLE -->
     <title>Javascript Portfolio - Boitumelo Sempe</title>
     <!-- META DESCRIPTION -->
@@ -15,7 +17,7 @@
     <meta name="keywords" content="javascript, sass, html5, portfolio, js">
     <!-- META AUTHOR -->
     <meta name=author content="Boitumelo Shakex Sempe">
-    <!-- CSS LINK -->
+    <!-- CSS LINK -->kf
     <link rel="stylesheet" href="css/style.css">
     <!-- ICONS LINK -->
     <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Montserrat:wght@200;400;600;700&display=swap" rel="stylesheet">
