--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="keywords" content="javascript, sass, html5, portfolio, js">
     <!-- META AUTHOR -->
     <meta name=author content="Boitumelo Shakex Sempe">
-    <!-- CSS LINK -->kf
+    <!-- CSS LINK -->
     <link rel="stylesheet" href="css/style.css">
     <!-- ICONS LINK -->
     <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Montserrat:wght@200;400;600;700&display=swap" rel="stylesheet">
