--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="theme-color" content="#F7E018">
     <!-- META OG IMAGE -->
     <meta name="image" property="og:image" content="https://javascript-portfolio-boitumelo-sempe.netlify.app/js-min.png">
+    <!-- META FAVICON -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- TITLE -->
     <title>Javascript Portfolio - Boitumelo Sempe</title>
     <!-- META DESCRIPTION -->
