--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 </head>
 
 <body>
+
+    <div class="loader_bg">
+        <div class="loader"></div>
+    </div>
     <header class="title">
         <h1>Javascript portfolio</h1>
     </header>
@@ -53,6 +57,15 @@
     </footer>
 
     <script src="js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- PRELOADER SCRIPT -->
+    <script>
+        setTimeout(function () {
+            $('.loader_bg').fadeToggle();
+        }, 4500);
+    </script>
 </body>
 
 </html>
