hero and header

--- a/index.html
+++ b/index.html
@@ -32,15 +32,14 @@
     </div>
     <header class="title">
         <h1>Javascript portfolio</h1>
-    </header>
-
-    <section>
         <h2>Boitumelo sempe</h2>
+    </header>
+    <div class="hero">
         <a href="#container">view projects</a>
         <!-- <figure>
             <img src="img/js.png" alt="javascript logo" style="width: 100%;">
         </figure> -->
-    </section>
+    </div>
 
     <main id="container">
         <!-- <article class="project-container">
