--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
     <div class="loader_bg">
         <div class="loader"></div>
     </div>
-    <header class="title">
-        <h1>Javascript portfolio</h1>
-        <h2>Boitumelo sempe</h2>
+    <header>
+        <div class="title">
+            <h1>Javascript portfolio</h1>
+            <h2>Boitumelo sempe</h2>
+        </div>
     </header>
     <div class="hero">
         <a href="#container">view projects</a>
