--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- META THEME-COLOR -->
-    <meta name="theme-color" content="#F7E018">
+    <!-- <meta name="theme-color" content="#F7E018"> -->
+    <meta name="theme-color" content="#000000">
     <!-- META OG IMAGE -->
     <meta name="image" property="og:image" content="https://javascript-portfolio-boitumelo-sempe.netlify.app/js-min.png">
     <!-- META FAVICON -->
@@ -27,30 +28,14 @@
 
 <body>
 
-    <div class="loader_bg">
+    <!-- <div class="loader_bg">
         <div class="loader"></div>
-    </div>
-    <header>
-        <div class="title">
-            <h1>Javascript portfolio</h1>
-            <h2>Boitumelo sempe</h2>
-        </div>
-    </header>
+    </div> -->
     <div class="hero">
-        <a href="#container">view projects</a>
-        <!-- <figure>
-            <img src="img/js.png" alt="javascript logo" style="width: 100%;">
-        </figure> -->
+        <h1>Javascript Portfolio</h1>
+        <h2>Boitumelo Sempe</h2>
     </div>
-
     <main id="container">
-        <!-- <article class="project-container">
-            <div class="project-item">
-                <h4>color flipper</h4>
-                <a href="https://shakexsempe.github.io/color-flipper/" target="_blank">
-                    <img src="img/color-flip.bmp" alt=""></a>
-            </div>
-        </article> -->
 
     </main>
     <footer>
