--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
     <meta name=author content="Boitumelo Shakex Sempe">
     <!-- CSS LINK -->
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/main.js" defer></script>
+
     <!-- ICONS LINK -->
     <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Montserrat:wght@200;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -42,7 +45,6 @@
         <p>copyright&copy; <a href="http://shakexsempe.netlify.app/" target="_blank">shakex sempe</a> <span id="date"></span></p>
     </footer>
 
-    <script src="js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
