--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
         <div class="loader"></div>
     </div> -->
     <div class="hero">
-        <h1>Javascript Portfolio</h1>
-        <h2>Boitumelo Sempe</h2>
+        <div class="hero-title">
+            <h1>Javascript Portfolio</h1>
+            <h2>Boitumelo Sempe</h2>
+        </div>
     </div>
     <main id="container">
 
