--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
         <div class="hero-title">
             <h1>Javascript Portfolio</h1>
             <h2>Boitumelo Sempe</h2>
+            <p>Engaging & Interactive Front-End <br> projects and tutorials</p>
+            <a href="#main">view projects</a>
         </div>
     </div>
-    <main id="container">
+    <main id="main">
 
     </main>
     <footer>
