--- a/index.html
+++ b/index.html
@@ -15,28 +15,37 @@
     <!-- TITLE -->
     <title>Javascript Portfolio - Boitumelo Sempe</title>
     <!-- META DESCRIPTION -->
-    <meta name="description" content="this is a javascript portfolio page for Boitumelo Shakes Sempe">
+    <meta name="description" content="Javascript portfolio page: Boitumelo Shakex Sempe">
     <!-- META KEYWORDS -->
     <meta name="keywords" content="javascript, sass, html5, portfolio, js">
     <!-- META AUTHOR -->
     <meta name=author content="Boitumelo Shakex Sempe">
+
+    <!-- PRELOAD -->
+    <link rel="preload" href="fonts/Montserrat-VariableFont_wght.woff2" as="font" type="font/woff2" crossorigin="crossorigin">
+    <link rel="preload" href="css/style.css" as="style" />
     <!-- CSS LINK -->
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js" defer></script>
 
-    <!-- ICONS LINK -->
-    <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Montserrat:wght@200;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
 
     <div class="hero">
         <div class="hero-title">
-            <h1>Javascript Portfolio</h1>
-            <h2>Boitumelo Sempe</h2>
-            <p>Engaging & Interactive Front-End <br> projects and tutorials</p>
-            <a href="#main">view projects</a>
+            
+            <div class="title">
+                <h1>Javascript Portfolio</h1>
+                <h2>Boitumelo Sempe</h2>
+            </div>
+
+            <div class="hero-cta">
+                <p>Engaging & Interactive Front-End <br> projects and tutorials</p>
+                <a href="#main">view projects</a>
+            </div>
+
         </div>
     </div>
     <main id="main">
