--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
 
 <body>
 
+
+    <!-- HERO -->
     <div class="hero">
-        
+
         <div class="hero-title">
             
             <div class="title">
@@ -50,9 +52,12 @@
         </div>
 
     </div>
-    <main id="main">
 
+    <!-- MAIN -->
+    <main id="main">
+        <!-- JAVASCRIPT -->
     </main>
+
     <footer>
         <p>copyright&copy; <a href="http://shakexsempe.netlify.app/" target="_blank">shakex sempe</a> <span id="date"></span></p>
     </footer>
